--- a/stackquestion/stackquestion/pom.xml
+++ b/stackquestion/stackquestion/pom.xml
@@ -107,7 +107,15 @@
 			<version>5.0.0</version>
 			<scope>provided</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20210307</version>
+		</dependency>
 
 
 
