--- a/exCeption/exCeption/src/main/resources/application.properties
+++ b/exCeption/exCeption/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=stackquestion
-spring.datasource.url=jdbc:mysql://localhost:3306/stackquestions?createDatabaseIfNotExist=true
+spring.application.name=exCeption
+spring.datasource.url=jdbc:mysql://localhost:3306/exCeption?createDatabaseIfNotExist=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
 spring.datasource.password=
