--- a/frontpfe/package.json
+++ b/frontpfe/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.1.0",
+    "@angular/cdk": "^19.2.7",
     "@angular/common": "^19.1.0",
     "@angular/compiler": "^19.1.0",
     "@angular/core": "^19.1.0",
@@ -20,10 +21,12 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/platform-server": "^19.1.0",
-    "@angular/router": "^19.1.0",
+    "@angular/router": "^19.2.4",
     "@angular/ssr": "^19.1.7",
     "@tailwindcss/postcss": "^4.0.11",
+    "@types/jwt-decode": "^2.2.1",
     "express": "^4.18.2",
+    "jwt-decode": "^4.0.0",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.0.11",
