--- a/frontpfe/package.json
+++ b/frontpfe/package.json
@@ -31,6 +31,7 @@
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.0.11",
     "tslib": "^2.3.0",
+    "vite-plugin-angular": "^0.0.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
